<resources>
    <string name="app_name">Marsz Sprint Bieganie</string>
    <string name="button_send">Button</string>
    <string name="button_kolarstwo">Kolarstwo</string>
    <string name="button_marsz">Marsz</string>
    <string name="button_sprint">Sprint</string>
    <string name="button_kajakarstwo">Kajakarstwo</string>
    <string name="button_send2">Wcisnij</string>
    <string name="text_view"></string>
    <string name="start_new_training">Rozpocznij nowy trening</string>
    <string name="motivation">Na pewno dałeś z siebie wszystko!</string>
    <string name="last_training_text">Twój ostatni trening:</string>

    <string name="paused"> Wznów </string>
    <string name="started"> Pauza </string>
    <string name="end_training"> Zakończ trening </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- training data: -->
    <string name="curSpeedText">Prędkość: %1$.1f m/s</string>
    <string name="avgSpeedText">Średnia prędkość: %1$.1f m/s</string>
    <string name="maxSpeedText">Maksymalna prędkość: %1$.1f m/s</string>
    <string name="distanceText">Dystans: %1$.0f m</string>
    <string name="kcalText">Spalone kalorie: %1$d kcal</string>

    <string name="selectDiscipline"> Wybierz dyscypile sportową</string>
    <string name="userProfile">Twój profil</string>
    <string name="settingsTxt">Ustawienia</string>
    <string name="checkYourFriendsList">Sprawdź, kto jest aktywny z twoich znajomych:</string>
    <string name="friendsListTxt">Lista znajomych</string>
    <string name="welcomeText">Witaj, Gabriel!</string>
    <string name="statisticChoose">Wybierz okres aktywności</string>

</resources>